tests/compiler_errors/name_redefinitions/type_redef_type.tlp
struct foo int end
struct foo bool end